# STREAMING_QUOTES

./: Cargo.toml  README.md
assets/: tickers.txt
src/: lib.rs  protocol.rs  quote.rs  tickers.rs
